--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.minimap.renderCharacters": false,
     "prettier.endOfLine": "crlf",
     "prettier.printWidth": 60,
-    "prettier.proseWrap": "always"
+    "prettier.proseWrap": "always",
+    "liveServer.settings.port": 5501
 }
